[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Debug/DebugOptions.gd" type="Script" id=1]
[ext_resource path="res://Objects/Debug/ResolutionChanger.gd" type="Script" id=2]

[node name="DebugOptions" type="Control"]
anchor_bottom = 1.0
margin_right = 228.0
margin_bottom = -340.0
rect_min_size = Vector2( 200, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionChanger" type="Node" parent="."]
script = ExtResource( 2 )
change_aspect_ratio_only = true

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 228.0
margin_bottom = 24.0

[node name="iPhoneX" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 24.0
text = "iPhone X"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 228.0
margin_bottom = 52.0

[node name="iPad" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
margin_right = 55.0
margin_bottom = 24.0
text = "iPad"
[connection signal="resolution_selected" from="." to="ResolutionChanger" method="_on_DebugOptions_resolution_selected"]
